--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="TopoSection">
         <header>
             <div id="navegação" class="navegação1">
-                <button id="btHome" class="BttNavegação">Home</button>
+                <button id="bttHome" class="BttNavegação">Home</button>
                 <button id="bttFotos" class="BttNavegação">Fotos</button>
                 <button id="bttElenco" class="BttNavegação">Elenco</button>
                 <button id="bttTrailer" class="BttNavegação">Trailer</button>
@@ -59,12 +59,6 @@
             <div id="barra1Menu" class="barra1-1"></div>
             <div id="barra2Menu" class="barra2-1"></div>
         </div>
-        <div id="marcadores">
-            <div id="marcador1" class="marcador1-1"></div>
-            <div id="marcador2" class="marcador2-1"></div>
-            <div id="marcador3" class="marcador3-1"></div>
-        </div>
-        
     </nav>
     
 
@@ -72,14 +66,16 @@
         <section id="Trailer">
             <h2 class="TitleSecund">Trailer:</h2>
             <div id="CardVideo">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dD264ZjfKlk?si=La9kNhlO23nBVT5N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="videoTrailer"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dD264ZjfKlk?si=La9kNhlO23nBVT5N" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture; web-share" allowfullscreen id="videoTrailer"></iframe>
             </div>
         </section>
 
         <section id="containerElenco">
             <section id="elenco">
                 <h2 class="TitleSecund">Elenco:</h2>
-                <section>
+                <section id="BoxAtores">
                     <div class="Atores">
                         <img src="arquivos/imagens/It-ator.jpg" alt="Foto do ator Bill Skarsgård" class="FotoAtor">
                         <h3 class="NameAtor">Bill Skarsgård</h3>
@@ -127,7 +123,7 @@
                     </div>
                 </section>
             </section>
-            <section>
+            <section id="botãoAba">
                 <div class="Linha"></div>
                 <button id="RevelarElenco">mostrar mais</button>
                 <div class="Linha"></div>
