--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                 <button id="bttHome" class="BttNavegação">Home</button>
                 <button id="bttFotos" class="BttNavegação">Fotos</button>
                 <button id="bttElenco" class="BttNavegação">Elenco</button>
-                <button id="bttTrailer" class="BttNavegação">Trailer</button>
             </div>
             <div id="link">
                 <a href="#"><img src="arquivos/imagens/icon_facebook.png" alt="logo do Facebook" class="ImagemLink"></a>
@@ -21,7 +20,10 @@
             </div>
         </header>
         <section id="cartazFilme">
-            <article id="Descrição">
+            <div id="CardVideo">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dD264ZjfKlk?si=La9kNhlO23nBVT5N" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture; web-share" allowfullscreen id="videoTrailer"></iframe>
                 <section id="DescriFilme">
                     <h1 id="titleFilme">It: a coisa</h1>
                     <p id="sinopse">
@@ -31,6 +33,8 @@
                         há vários séculos.
                     </p>
                 </section>
+            </div>
+            <article id="Descrição">
                 <section id="Autores">
                     <div class="DivAutores">
                         <h2 class="TitleAutor">Gênero</h2>
@@ -63,19 +67,10 @@
     
 
     <section id="AbaComplemento">
-        <section id="Trailer">
-            <h2 class="TitleSecund">Trailer:</h2>
-            <div id="CardVideo">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dD264ZjfKlk?si=La9kNhlO23nBVT5N" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-                gyroscope; picture-in-picture; web-share" allowfullscreen id="videoTrailer"></iframe>
-            </div>
-        </section>
-
         <section id="containerElenco">
             <section id="elenco">
                 <h2 class="TitleSecund">Elenco:</h2>
-                <section id="BoxAtores">
+                <section id="BoxAtores" class="box1">
                     <div class="Atores">
                         <img src="arquivos/imagens/It-ator.jpg" alt="Foto do ator Bill Skarsgård" class="FotoAtor">
                         <h3 class="NameAtor">Bill Skarsgård</h3>
@@ -125,7 +120,7 @@
             </section>
             <section id="botãoAba">
                 <div class="Linha"></div>
-                <button id="RevelarElenco">mostrar mais</button>
+                <button id="RevelarElenco">Mostrar mais</button>
                 <div class="Linha"></div>
             </section>
         </section>
